--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,19 @@
-.header {
+header {
+    /* border: 2px solid red; */
     background-image: url('../images/banner/banner1.png');
     background-repeat: no-repeat;
-    background-position:top ;
-    background-size: cover ;
-    padding: 215px 175px 250px 0;
-    text-align: right ;  
+    background-size: cover;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: end;
+}
+
+.section {
+    /* border: 2px solid red; */
+    width: 30%;
+    max-width: 500px; 
+    text-align: right;
+    padding: 215px 230px 180px 0px ;
 }
 
 .banner-title {
@@ -13,6 +22,7 @@
     font-size: 65px;
     font-weight: 700;
     padding-bottom: 25px;
+    /* width: 525px; */
 }
 
 .banner-description {
@@ -21,6 +31,7 @@
     font-size: 16px;
     font-weight: 400;
     padding-bottom: 32px;
+    /* width: 494px; */
 }
 
 .banner-btn {
